logica agregar items al carrito(nombres)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <section></section>
             <aside id="carrito">
                 <h3>Carrito</h3>
-                <p>Aún no hay productos en el carrito</p>
+                <ul id="lista-carrito"></ul>
             </aside>
         </div>
         
